--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,119 @@
-
-body{
+body {
   margin: 0;
-  background-color: aqua;
+  background-color: rgb(231, 206, 159);
 }
-.section{
-  background-color: lightsalmon;
-
-}
-.container{
-  max-width: 800px;
+.container {
+  max-width: 1180px;
   margin: 0 auto;
+}
+.nav-section {
+  background-color: #f7f4ef;
+  display: flex;
+  padding: 5px 30px;
+  /* justify-content: space-around; */
+}
+.nav-caption {
+  text-align: center;
+  margin-left: 308px;
+  align-items: center;
+  margin-bottom: -10px;
+  padding-top: 40px;
+}
+.nav-caption h1 {
+  text-transform: capitalize;
+}
+.title {
+  position: relative;
+  font-size: 2.9rem;
+}
+.title {
+  border-bottom: solid 3px orange;
+  display: inline;
+}
+.nav-caption ul {
+  list-style-type: none;
+  display: flex;
+  /* background-color: red; */
+  padding-left: 0;
+  justify-content: center;
+}
+.nav-caption li {
+  margin-left: 20px;
+  background-color: orange;
+  padding: 5px 10px;
+  text-transform: capitalize;
+  border-radius: 5px;
+  letter-spacing: 1.5px;
+  font-size: 18px;
+  text-transform: 0.2px 0.3px 0.5px black;
+  color: white;
+}
+.logo {
+  /* position: relative; */
+  background-color: orangered;
+  border-radius: 50%;
+  text-align: center;
+  padding: 8px;
+  color: white;
+  /* font-size: ; */
+  /* display: block; */
+}
+.logo::before {
+  content: "Acme";
+  /* display: block; */
+  background-color: white;
+  font-size: 12px;
+  border-radius: 50%;
+  font-weight: 900;
+  color: orangered;
+  text-shadow: 0 0 1px black;
+  padding: 5px;
+  /* position: absolute;
+  bottom: 0;
+  left: 0; */
+  /* right: 0; */
+  /* top: 0; */
+}
+
+.logo::after {
+  content: "Food is life";
+  display: block;
+  background-color: white;
+  /* position: absolute; */
+  font-size: 12px;
+  border-radius: 50%;
+  /* font-weight: 900; */
+  text-shadow: 0 0 1px black;
+  color: orangered;
+  /* padding:0 15px; */
+  /* bottom:10px; */
+}
+
+span {
+  color: yellow;
+  font-size: 45px;
+  text-shadow: 0 0 1px black;
+  font-weight: 900;
+}
+
+/* Menu section */
+.menu-img {
+  /* max-width: 100%; */
+  /* height: 250px; */
+  /* width: 380px;  */
+  /* max-height: 100%; */
+  /* object-fit: cover; */
+  border-radius: 15px;
+  /* padding: 50px 0; */
+  object-fit: cover;
+  width: 380px;
+  max-height: 250px;
+  margin-top: 60px;
+  overflow: hidden;
+}
+section {
+  display: grid;
+  grid-template: 1fr/1fr 1fr 1fr;
+  /* background-color: blue; */
+  gap: 40px;
 }
